# Sc-Target-auction-lots

./: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
StalcraftAuction/: asgi.py  settings.py  urls.py  wsgi.py
auction/: admin.py  middleware.py  models.py  urls.py  utils.py  views.py
auction/migrations/: 0001_initial.py  0002_alter_clientselection_selected_items.py
auction/scripts/: Api.py
auction/static/auction/css/: choice_lots.css  forms.css  info_user.css  main.css  password_change.css  profile_user.css
auction/templates/auction/: 404.html  500.html  base_main.html  change_password.html  choice_lots.html  fail.html  form_base.html  info_user.html  main.html  profile_user.html  settings.html
authentication/: forms.py  models.py  urls.py  utils.py  views.py
authentication/migrations/: 0001_initial.py  0002_pendinguser_delete_emailconfirmation.py  0003_pendinguser_password.py
authentication/static/authentication/css/: authentication.css  form.css
authentication/templates/authentication/: authentication.html  base.html  confirmation_sent.html  email_sending.html
authentication/templates/registration/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
