[tool.poetry]
name = "scauction"
version = "0.1.0"
description = ""
authors = ["Arhimiel <stepan.minikraft@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django-admin = "^2.0.2"
requests = "^2.32.3"
psycopg2 = "^2.9.10"
channels = "^4.1.0"
aiohttp = "^3.10.10"
docker = "^7.1.0"
django = "^5.1.3"
django-redis = "^5.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
